--- a/info.yaml
+++ b/info.yaml
@@ -17,7 +17,7 @@ project:
   source_files:        
     - "project.v"
     - "pulse_counter.v"
-    - "gray_counter.v"
+    - "gray_count.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
